test/spec_vectors/local_init/ok/module_0.wat
(module (func (export "get-after-set") (param $p (ref extern)) (result (ref extern)) (local $x (ref extern)) (local.set $x (local.get $p)) (local.get $x)) (func (export "get-after-tee") (param $p (ref extern)) (result (ref extern)) (local $x (ref extern)) (drop (local.tee $x (local.get $p))) (local.get $x)) (func (export "get-in-block-after-set") (param $p (ref extern)) (result (ref extern)) (local $x (ref extern)) (local.set $x (local.get $p)) (block (result (ref extern)) (local.get $x))))